--- a/index.html
+++ b/index.html
@@ -88,5 +88,6 @@
 </head>
   <body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200 transition-colors duration-300">
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
