--- a/index.html
+++ b/index.html
@@ -74,20 +74,21 @@
         document.documentElement.classList.remove('dark')
       }
     </script>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.1.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "react/": "https://esm.sh/react@^19.1.1/",
-    "recharts": "https://esm.sh/recharts@^3.1.2",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.8.1"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "react": "https://aistudiocdn.com/react@^19.1.1",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.1",
+    "vite": "https://aistudiocdn.com/vite@^7.1.3",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2"
   }
 }
 </script>
 </head>
   <body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200 transition-colors duration-300">
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
