feat: Implement SEO improvements and version bump
This commit introduces significant SEO enhancements across multiple pages and updates the application version to 2.9.

Key changes include:
- Adding meta description tags to `index.html` for improved search engine visibility.
- Implementing the `SEO` component and JSON-LD structured data for each page (`TemplatesPage`, `FeaturesPage`, `ModulesPage`, `PricingPage`) to provide richer search results.
- Updating `metadata.json` to reflect the new version name "Website 2.9 Seo".
- Refactoring `PricingPage` to include FAQ data for better user experience and SEO.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>مگامیل - پلتفرم هوشمند بازاریابی ایمیلی</title>
+    <meta name="description" content="مگامیل پلتفرمی جامع برای ساخت، ارسال و تحلیل کمپین‌های ایمیلی شماست. به هزاران کسب‌وکار موفق بپیوندید و فروش خود را افزایش دهید." />
     <link id="favicon" rel="icon" type="image/png" href="" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
