--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.1",
     "vite": "https://aistudiocdn.com/vite@^7.1.3",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2"
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "path": "https://aistudiocdn.com/path@^0.12.7"
   }
 }
 </script>
